--- a/config/diffdrive.yaml
+++ b/config/diffdrive.yaml
@@ -20,12 +20,24 @@ base_frame_id: base_footprint
 linear:
   x:
     has_velocity_limits    : true
-    max_velocity           : 0.7   # m/s
+    max_velocity           : 1.0   # m/s          0.7
     has_acceleration_limits: true
-    max_acceleration       : 1.0   # m/s^2
+    max_acceleration       : 1.0   # m/s^2	  1.0
 angular:
   z:
     has_velocity_limits    : true
-    max_velocity           : 2.0   # rad/s
+    max_velocity           : 1.0   # rad/s        2.0
     has_acceleration_limits: true
-    max_acceleration       : 6.0   # rad/s^2
+    max_acceleration       : 1.0   # rad/s^2      6.0
+
+# [BETA] testing PID gains 
+/gazebo_ros_control:
+  pid_gains:
+    left_wheel_joint:
+      p: 1.0
+      i: 0.0
+      d: 0.0
+    right_wheel_joint:
+      p: 1.0
+      i: 0.0
+      d: 0.0
