--- a/config/envs/apartment_1/object_locations.yaml
+++ b/config/envs/apartment_1/object_locations.yaml
@@ -64,3 +64,9 @@ table_2person_1:
   position: [ 4.5, 2.5, 0.0 ]
   orientation: [ 0.0, 0.0, 0.0 ]
 
+door1:
+  model: door1
+  model_type: sdf
+  position: [ -2, -2, 1.3]
+  orientation: [ 0.0, 0.0, 0.0 ]
+
