--- a/models/garage/model.config
+++ b/models/garage/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <model>
-  <name>apartment_1</name>
+  <name>garage</name>
   <version>1.0</version>
   <sdf version="1.6">model.sdf</sdf>
   <author>
