--- a/config/envs/rococolab/object_locations.yaml
+++ b/config/envs/rococolab/object_locations.yaml
@@ -163,8 +163,15 @@ shelf_0:
   model_type: sdf
   position: [ 5.14, 2.07, 0.0 ]
   orientation: [ 0.0, 0.0, -1.54 ]
+
 pc:
   model: pc
   model_type: sdf
   position: [ 0.21, 3.31, 0.0 ]
+  orientation: [ 0.0, 0.0, 1.57 ]
+
+grass_robocup:
+  model: grass_robocup
+  model_type: sdf
+  position: [ 2.75, 1.87, 0.0 ]
   orientation: [ 0.0, 0.0, 1.57 ]
