--- a/config/envs/apartment_4/object_groups.yaml
+++ b/config/envs/apartment_4/object_groups.yaml
@@ -1,22 +1,22 @@
 kitchen:
-- table_2person_1
-- refrigerator_white_1
-- chair_fancy_1
-- chair_fancy_1_0
-- chair_fancy_1_1
-- drawer_kitchen_1
-- drawer_kitchen_1_0
-- microwave
-- burner_stove
-- sink
-- trashcan
+- apartment_4_table_2person_1
+- apartment_4_refrigerator_white_1
+- apartment_4_chair_fancy_1
+- apartment_4_chair_fancy_1_0
+- apartment_4_chair_fancy_1_1
+- apartment_4_drawer_kitchen_1
+- apartment_4_drawer_kitchen_1_0
+- apartment_4_microwave
+- apartment_4_burner_stove
+- apartment_4_sink
+- apartment_4_trashcan
 living_room:
-- chair_foldable
-- sofa_large_1
-- table_round_1
-- tv_samsung
-- table_tv
+- apartment_4_chair_foldable
+- apartment_4_sofa_large_1
+- apartment_4_table_round_1
+- apartment_4_tv_samsung
+- apartment_4_table_tv
 corridor:
-- rack_coat
-- drawer
+- apartment_4_rack_coat
+- apartment_4_drawer
 
