--- a/config/envs/phd_office/object_groups.yaml
+++ b/config/envs/phd_office/object_groups.yaml
@@ -1,43 +1,43 @@
 phdoffice:
-- desk_shared
-- desk_shared_0
-- desk_shared_1
-- desk_shared_2
-- desk_shared_3
-- desk_shared_4
-- desk_shared_5
-- desk_shared_6
-- desk_shared_7
-- desk_shared_8
-- desk_shared_9
-- desk_shared_10
-- boxes
-- office_chair
-- office_chair_0
-- office_chair_1
-- office_chair_2
-- office_chair_3
-- office_chair_4
-- office_chair_5
-- office_chair_6
-- office_chair_7
-- office_chair_8
-- office_chair_9
-- office_chair_10
-- drawer
-- shelf
-- microwave
-- rack_coat
-- monitor_pc
-- monitor_pc_0
-- monitor_pc_1
-- monitor_pc_2
-- monitor_pc_3
-- monitor_pc_4
-- monitor_pc_5
-- monitor_pc_6
-- monitor_pc_7
-- monitor_pc_8
-- monitor_pc_9
-- monitor_pc_10
-- books
+- phd_office_desk_shared
+- phd_office_desk_shared_0
+- phd_office_desk_shared_1
+- phd_office_desk_shared_2
+- phd_office_desk_shared_3
+- phd_office_desk_shared_4
+- phd_office_desk_shared_5
+- phd_office_desk_shared_6
+- phd_office_desk_shared_7
+- phd_office_desk_shared_8
+- phd_office_desk_shared_9
+- phd_office_desk_shared_10
+- phd_office_boxes
+- phd_office_office_chair
+- phd_office_office_chair_0
+- phd_office_office_chair_1
+- phd_office_office_chair_2
+- phd_office_office_chair_3
+- phd_office_office_chair_4
+- phd_office_office_chair_5
+- phd_office_office_chair_6
+- phd_office_office_chair_7
+- phd_office_office_chair_8
+- phd_office_office_chair_9
+- phd_office_office_chair_10
+- phd_office_drawer
+- phd_office_shelf
+- phd_office_microwave
+- phd_office_rack_coat
+- phd_office_monitor_pc
+- phd_office_monitor_pc_0
+- phd_office_monitor_pc_1
+- phd_office_monitor_pc_2
+- phd_office_monitor_pc_3
+- phd_office_monitor_pc_4
+- phd_office_monitor_pc_5
+- phd_office_monitor_pc_6
+- phd_office_monitor_pc_7
+- phd_office_monitor_pc_8
+- phd_office_monitor_pc_9
+- phd_office_monitor_pc_10
+- phd_office_books
