--- a/config/envs/rococolab/object_groups.yaml
+++ b/config/envs/rococolab/object_groups.yaml
@@ -1,35 +1,35 @@
 rococolab:
-- desk_shared
-- desk_shared_0
-- desk_shared_1
-- desk_shared_2
-- desk_shared_3
-- desk_shared_4
-- desk_shared_5
-- desk_shared_6
-- desk_shared_7
-- monitor_pc
-- monitor_pc_0
-- monitor_pc_1
-- books
-- books_0
-- books_1
-- drawer
-- drawer_0
-- office_chair
-- office_chair_0
-- office_chair_1
-- office_chair_2
-- office_chair_3
-- office_chair_4
-- office_chair_5
-- chair_foldable
-- chair_foldable_0
-- chair_foldable_1
-- chair_foldable_2
-- chair_foldable_3
-- chair_foldable_4
-- shelf
-- shelf_0
-- pc
-- grass_robocup
+- rococolab_desk_shared
+- rococolab_desk_shared_0
+- rococolab_desk_shared_1
+- rococolab_desk_shared_2
+- rococolab_desk_shared_3
+- rococolab_desk_shared_4
+- rococolab_desk_shared_5
+- rococolab_desk_shared_6
+- rococolab_desk_shared_7
+- rococolab_monitor_pc
+- rococolab_monitor_pc_0
+- rococolab_monitor_pc_1
+- rococolab_books
+- rococolab_books_0
+- rococolab_books_1
+- rococolab_drawer
+- rococolab_drawer_0
+- rococolab_office_chair
+- rococolab_office_chair_0
+- rococolab_office_chair_1
+- rococolab_office_chair_2
+- rococolab_office_chair_3
+- rococolab_office_chair_4
+- rococolab_office_chair_5
+- rococolab_chair_foldable
+- rococolab_chair_foldable_0
+- rococolab_chair_foldable_1
+- rococolab_chair_foldable_2
+- rococolab_chair_foldable_3
+- rococolab_chair_foldable_4
+- rococolab_shelf
+- rococolab_shelf_0
+- rococolab_pc
+- rococolab_grass_robocup
