--- a/config/envs/test_apartment_2/object_groups.yaml
+++ b/config/envs/test_apartment_2/object_groups.yaml
@@ -1,14 +1,14 @@
 livingroom:
-- sink
-- burner_stove
-- table_ikea_bjursta
-- chair_ikea_borje
-#- couch
-- cabinet_ikea_malm_big
-- milk
-- salt
-- tomato_sauce
-- zwieback
-- table_tv
-- tv_samsung
+- ta2_sink
+- ta2_burner_stove
+- ta2_table_ikea_bjursta
+- ta2_chair_ikea_borje
+#- ta2_couch
+- ta2_cabinet_ikea_malm_big
+- ta2_milk
+- ta2_salt
+- ta2_tomato_sauce
+- ta2_zwieback
+- ta2_table_tv
+- ta2_tv_samsung
 
