--- a/config/envs/test_apartment_2/object_locations.yaml
+++ b/config/envs/test_apartment_2/object_locations.yaml
@@ -1,71 +1,49 @@
-sink:
+ta2_sink:
   model: sink
   model_type: sdf
   position: [ 1.53230, 2.204468, 0.0 ]
   orientation: [ 0.0, 0.0, 0 ]
   
-burner_stove:
+ta2_burner_stove:
   model: burner_stove
   model_type: sdf
   position: [ 2.868422, 2.205050, 0.0 ]
   orientation: [ 0.0, 0.0, 0 ]
   
-table_ikea_bjursta:
+ta2_table_ikea_bjursta:
   model: table_ikea_bjursta
   model_type: sdf
   position: [ 1.77236080355, -1.0, 0.0 ]
   orientation: [ 0.0, 0.0, 0.0 ]
     
-chair_ikea_borje:
+ta2_chair_ikea_borje:
   model: chair_ikea_borje
   model_type: sdf
   position: [ 1.969930, 0.0, 0.0 ]
   orientation: [ 0.0, 0.0, 0.0 ]
 
-couch:
+ta2_couch:
   model: couch
   model_type: sdf
   position: [ -1.171137, -0.050618, 0.0 ]
   orientation: [ 0.0, 0.0, -1.57 ]
 
  
-table_tv:
+ta2_table_tv:
   model: table_tv
   model_type: sdf
   position: [ -3.507171, 0.0, 0 ]
   orientation: [ 0.0, 0.0, -1.57 ]
 
-tv_samsung:
+ta2_tv_samsung:
   model: tv_samsung
   model_type: sdf
   position: [ -3.431988, 0.0, 0.576413 ]
   orientation: [ 0.0, 0.0, 1.57 ]
 
-cabinet_ikea_malm_big:
+ta2_cabinet_ikea_malm_big:
   model: cabinet_ikea_malm_big
-  model_type: sdf
-  position: [ -2.338829, 2.341134, 0 ]
-  orientation: [ 0.0, 0.0, -3.14 ]
-
-milk:
-  model: milk
-  model_type: sdf
-  position: [ 1.970516, -1.276770, 0.724505 ]
-  orientation: [ 0.0, 0.0, 0.0 ]
-
-salt:
-  model: salt
-  model_type: sdf
-  position: [ -2.486820, 2.204470, 0.770000 ]
-  orientation: [ 0.0, 0.0, 0.0 ]
-
-tomato_sauce:
-  model: tomato_sauce
-  model_type: sdf
-  position: [ -2.143870, 2.382658, 0.780735 ]
-  orientation: [ 0.0, 0.0, 0.0 ]
-
-zwieback:
+  model_type: sdf_apartzwieback:
   model: zwieback
   model_type: sdf
   position: [ 1.646010, -1.036690, 0.750673 ]
