--- a/config/diffdrive.yaml
+++ b/config/diffdrive.yaml
@@ -9,8 +9,10 @@ wheel_separation: 0.2
 # Odometry covariances for the encoder output of the robot. These values should
 # be tuned to your robot's sample odometry data, but these values are a good place
 # to start
-pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
-twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+# pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+# twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+pose_covariance_diagonal: [0.000, 0.000, 0.000, 0.000, 0.000, 0.000]
+twist_covariance_diagonal: [0.000, 0.000, 0.000, 0.000, 0.000, 0.000]
 
 # Top level frame (link) of the robot description
 #base_frame_id: base_link
@@ -25,7 +27,7 @@ linear:
     max_acceleration       : 1.0   # m/s^2	  1.0
 angular:
   z:
-    has_velocity_limits    : true
+    has_velocity_limiEs    : true
     max_velocity           : 1.0   # rad/s        2.0
     has_acceleration_limits: true
     max_acceleration       : 1.0   # rad/s^2      6.0
